--- a/services/knowledge-ingestor/requirements.txt
+++ b/services/knowledge-ingestor/requirements.txt
@@ -9,7 +9,7 @@ tree-sitter-languages==1.10.2
 qdrant-client==1.12.1
 tiktoken==0.8.0
 gitpython==3.1.43
-PyPDF2==3.0.1
+pypdf==6.6.2
 beautifulsoup4==4.12.3
 markdownify==0.14.1
 feedparser==6.0.11
